package main;

public class Scania {
}
