@startuml

title __LABORATION1's Class Diagram__\n

  package main {
    abstract class Car {
    }
  }
  

  package main {
    package main.vehicles {
      package main.vehicles.cars {
        abstract class Car {
        }
      }
    }
  }
  

  package main {
    package main.controllers {
      class CarController {
      }
    }
  }
  

  package main {
    package main.vehicles {
      package main.vehicles.transport {
        class CarFerry {
        }
      }
    }
  }
  

  package main {
    package main.vehicles {
      package main.vehicles.transport {
        class CarTransport {
        }
      }
    }
  }
  

  package main {
    package main.views {
      class CarView {
      }
    }
  }
  

  package main {
    abstract class Direction {
    }
  }
  

  package main {
    abstract class Direction {
    }
  }
  

  package main {
    class DrawPanel {
    }
  }
  

  package main {
    package main.vehicles {
      package main.vehicles.flatbeds {
        class Flatbed {
        }
      }
    }
  }
  

  package main {
    interface IMoveable {
    }
  }
  

  package main {
    interface IMoveable {
    }
  }
  

  package main {
    class Perpendicular {
    }
  }
  

  package main {
    class Perpendicular {
    }
  }
  

  package main {
    package main.vehicles {
      package main.vehicles.flatbeds {
        class Ramp {
        }
      }
    }
  }
  

  package main {
    package main.vehicles {
      package main.vehicles.cars {
        class Saab95 {
        }
      }
    }
  }
  

  package main {
    class Saab95 {
    }
  }
  

  package main {
    package main.vehicles {
      package main.vehicles.transport {
        class Scania {
        }
      }
    }
  }
  

  package main {
    package main.vehicles {
      package main.vehicles.transport {
        class Transport {
        }
      }
    }
  }
  

  package main {
    package main.vehicles {
      abstract class Vehicle {
      }
    }
  }
  

  package main {
    package main.vehicles {
      package main.vehicles.cars {
        class Volvo240 {
        }
      }
    }
  }
  

  package main {
    class Volvo240 {
    }
  }
  

  Car -up-|> IMoveable
  Car o-- Direction : direction
  Car -up-|> Vehicle
  Car o-- Type : type
  CarController o-- CarView : frame
  CarFerry -up-|> Vehicle
  CarFerry o-- Ramp : ramp
  CarFerry o-- Transport : transport
  CarTransport -up-|> Car
  CarTransport o-- Ramp : ramp
  CarTransport o-- Transport : transport
  CarView -up-|> JFrame
  CarView o-- CarController : carC
  CarView o-- DrawPanel : drawPanel
  DrawPanel -up-|> JPanel
  Perpendicular -up-|> Direction
  Perpendicular -up-|> Direction
  Ramp -up-|> Flatbed
  Saab95 -up-|> Car
  Scania -up-|> Car
  Scania o-- Flatbed : flatbed
  Transport o-- Ramp : ramp
  Vehicle -up-|> IMoveable
  Vehicle o-- Direction : direction
  Volvo240 -up-|> Car


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
